<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <variable
            name="shoeDetailsViewModel"
            type="com.udacity.shoestore.viewModels.ShoeListViewModel" />
    </data>

    <!--    it use to position the views in screen and set save and cancel buttons at the bottom of the screen   -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ShoeDetail">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/name"
            android:id="@+id/til_shoeDetails_name"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={shoeDetailsViewModel.newShoe.name}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_shoeDetails_name"
            android:id="@+id/til_shoeDetails_size"
            android:hint="@string/size"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@={``+ shoeDetailsViewModel.newShoe.size}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_shoeDetails_size"
            android:id="@+id/til_shoeDetails_company"
            android:hint="@string/company"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={shoeDetailsViewModel.newShoe.company}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_shoeDetails_company"
            android:id="@+id/til_shoeDetails_description"
            android:hint="@string/description"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={shoeDetailsViewModel.newShoe.description}"
                />
        </com.google.android.material.textfield.TextInputLayout>


<!--        Here i use linear layout to set save and cancel buttons beside each others-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                style="@style/cancelButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:onClick="@{() -> shoeDetailsViewModel.cancelClicked()}"

                />

            <Button
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_weight="1"
                android:onClick="@{() -> shoeDetailsViewModel.saveClicked()}"
                />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>