<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="loginViewModel"
            type="com.udacity.shoestore.viewModels.LoginViewModel" />
    </data>
    
<!--     constraint is easier than layout, because i use horizontal and vertical views-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.Login"
        android:padding="10dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/et_login_email"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@id/et_login_email"
            android:id="@+id/et_login_password"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_login_password"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/login"
            style="@style/buttonStyle"
            android:onClick="@{() -> loginViewModel.loginAndCreateAccount()}"
            />
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_login_password"
            android:text="@string/create_account"
            style="@style/buttonStyle"
            android:onClick="@{() -> loginViewModel.loginAndCreateAccount()}"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>