<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="instructionViewModel"
            type="com.udacity.shoestore.viewModels.InstructionViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.Instruction">

        <TextView
            android:id="@+id/tv_instruction_header"
            style="@style/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction_screen"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_instruction_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_instruction_header"
            style="@style/info"
            android:text="@string/click_the_button_to_start_the_app"
            />

        <Button
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_instruction_info"
            android:onClick="@{() -> instructionViewModel.navigateButtonClicked()}"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>