<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="welcomeViewModel"
            type="com.udacity.shoestore.viewModels.WelcomeViewModel" />
    </data>

    <!--    it use to position the views in screen    -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.Welcome">

        <TextView
            android:id="@+id/tv_welcome_header"
            style="@style/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_screen"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcome_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome_header"
            style="@style/info"
            android:text="@string/click_the_button_to_read_introductions"
            />

        <Button
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome_info"
            android:onClick="@{() -> welcomeViewModel.navigateButtonClicked()}"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>